--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
       <a class="btn-to-top" title="Return to top"> <span class="material-icons">arrow_upward</span></a>
     </div>
 
-    <script src="index.js" type="module"></script>
+    <script src="index.js"></script>
   </body>
 </html>
