--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     <title>Homework 11</title>
   </head>
   <body>
-    <div class="search-container">
+    
+    <!-- <div class="search-container">
       <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
         <button type="submit">
@@ -26,7 +27,7 @@
       <div class="gallery"></div>
       <button type="button" class="btn-load-more is-hidden">Load more</button>
       <a class="btn-to-top" title="Return to top"> <span class="material-icons">arrow_upward</span></a>
-    </div>
+    </div> -->
 
     <script src="index.js" type="module"></script>
   </body>
