--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="./sass/index.scss" />
     <title>Homework 11</title>
   </head>
   <body>
-    
+    <include src="./partials/searchcontainer.html"></include>
+    <include src="./partials/gallerycontainer.html"></include>
     <!-- <div class="search-container">
       <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
